fixed bug for text overflow on card

--- a/client/src/assets/css/card.css
+++ b/client/src/assets/css/card.css
@@ -9,7 +9,7 @@
     word-break: break-word;
     overflow: hidden;
     padding: 1rem;
-    white-space: pre;
+    white-space: pre-wrap;
     
 }
 
